<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="50dp"/>

        <Button
            android:id="@+id/startButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/startButtonText"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/stopButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/stopButtonText"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/googleButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/googleButtonText"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/callButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/callButtonText"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/mediaButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/mediaButtonText"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/finishButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/finishButtonText"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>